Fix truncate multiple lines

--- a/src/assets/scss/alexandria-util.scss
+++ b/src/assets/scss/alexandria-util.scss
@@ -28,5 +28,14 @@
     max-width: 10.5rem;
 }
 
+.truncate-line {
+    overflow: hidden; 
+    display: -webkit-box;
+    // default lines
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical; 
+    text-overflow: ellipsis;
+}
+
 html[data-theme="dark"] {
 }
